# Finport

./: .dockerignore  .gitignore  Dockerfile  README.md  analysis.py  app.py  constants.py  data_loader.py  demo_data.py  models.py  portfolio_config.py  portfolio_state.py  pyproject.toml  report_exporter.py  requirements-dev.txt  requirements.txt  sidebar.py  theme.py  ticker_utils.py  ui_components.py  visualization.py
.github/workflows/: tests.yml
.streamlit/: config.toml
content/: __init__.py  glossary.py
examples/: sample_portfolio.json
services/: __init__.py  portfolio_analysis.py
sidebar/: __init__.py  callbacks.py  donut.py  sections.py  state.py
tests/: test_analysis.py  test_data_loader.py  test_demo_data.py  test_models.py  test_portfolio_analysis_service.py  test_portfolio_config.py  test_portfolio_state.py  test_portfolio_state_properties.py  test_report_exporter.py
ui/: dialogs.py  header.py  landing.py  loader.py  logo.py  styles.py
views/: __init__.py  assumptions.py  benchmark.py  correlation.py  dashboard_tabs.py  export.py  glossary.py  monte_carlo.py  optimization.py  overview.py  returns.py
